<resources>
    <string name="app_name">Putting zones</string>
    <string name="online0">0 On line</string>
    <string name="short_left_1">1 Short left</string>
    <string name="short_right_2">2 Short right</string>
    <string name="just_left_3">3 Just left</string>
    <string name="just_right_4">4 Just right</string>
    <string name="long_left_5">5 Long left</string>
    <string name="long_right_6">6 Long right</string>
    <string name="add_button">Add</string>
    <string name="stats_button">Statistics</string>
    <string name="close_button">Close</string>
    <string name="statistics">Statistics</string>
    <string name="putting_zones">Putting Zones</string>
    <string name="map_of_zones">Map of zones</string>
    <string name="back">Back</string>
</resources>
